<resources>
    <string name="app_name">MediaMogul</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Media title</string>
    <string name="action_search">Search</string>
    <string name="title_activity_media_details">Media Details</string>
    <string name="title_activity_media_search">MediaMogul</string>
    <string name="metascore_overwhelming_dislike">Overwhelming Dislike</string>
    <string name="metascore_generally_unfavorable_reviews">Generally Unfavorable Reviews</string>
    <string name="metascore_mixed_reviews">Mixed or Average Reviews</string>
    <string name="metascore_generally_favorable_reviews">Generally Favorable Reviews</string>
    <string name="metascore_universal_acclaim">Universal Acclaim</string>
    <string name="search_progress_dialog_title">Searching</string>
    <string name="search_progress_dialog_message">Please wait...</string>
    <string name="title_activity_media_results">Results</string>
    <string name="media_result_list_show_more">Tap to show more</string>
    <string name="metascore_label">Metascore Rating:</string>
    <string name="writers_label">Writers:</string>
    <string name="director_label">Director:</string>
    <string name="release_date_label">Released:</string>
    <string name="imdb_label">IMDb Rating:</string>
    <string name="imdb_rating">%.1f/10</string>
    <string name="media_metacritic_link">Tap to view on Metacritic</string>
    <string name="media_imdb_link">Tap to view on IMDb</string>
    <string name="media_writer">Written by %s</string>
    <string name="media_director">Directed by %s</string>
    <string name="add_to_library">Add to Library</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="remove_from_wishlist">Remove from Wishlist</string>
    <string name="search_restriction">Search for media that:</string>
    <string name="search_restriction_own">I own</string>
    <string name="search_restriction_dont_own">I don\'t own</string>
    <string name="search_restriction_none">Any of the above</string>
    <string name="search_button">Search</string>
    <string name="search_text_hint">Media Title</string>
    <string name="search_restriction_wishlist">Is on my wishlist</string>
    <plurals name="imdb_votes">
        <item quantity="one">(%d vote)</item>
        <item quantity="other">(%,d votes)</item>
    </plurals>
</resources>
