<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_media_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.marshl.mediamogul.MediaSearchActivity"
    tools:showIn="@layout/activity_media_search">

    <EditText
        android:id="@+id/search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/search_text_hint"
        android:imeOptions="actionSearch"
        android:inputType="text" />

    <TextView
        android:id="@+id/ownership_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_text"
        android:text="@string/search_restriction" />

    <RadioGroup
        android:id="@+id/ownership_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ownership_label"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/ownership_owned_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_restriction_own" />

        <RadioButton
            android:id="@+id/ownership_wishlist_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_restriction_wishlist" />

        <RadioButton
            android:id="@+id/ownership_not_owned_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_restriction_dont_own" />

        <RadioButton
            android:id="@+id/ownership_both_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_restriction_none" />
    </RadioGroup>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/ownership_radio_group"
        android:layout_marginTop="12dp"
        android:onClick="onSearchButtonClick"
        android:text="@string/search_button" />

</RelativeLayout>
